# admin_billdesk

./: .env.example  .gitignore  clients.json  meals.json  pyproject.toml  readme.md  requirements.txt  rides.json  sample_output.txt
docs/: REUSABLE_CODE_AND_ONBOARDING.md
scripts/: README.md  run_app.py  run_app.sh  run_local_llm.sh  sync_sharepoint_to_resources.py
src/: app.py  bill_extractor.py  bill_extractor_tesseract.py  commute_invoice_extractor.py  langchain_extractor.py  output.json  rides.json  test.py  tester.py
src/app/: README.md  __init__.py  commute_invoice_extractor.py  decision_engine.py  decision_service.py  meal_invoice_extractor.py  policy_extractor.py  validate_commute_fields.py
src/commons/: FileUtils.py  README.md  README_DEPS.md  REFACTOR_REVIEW.md  __init__.py  config_reader.py  constants.py  file_utils.py  llm_utils.py  utils.py
src/config/: config.yaml
src/entity/: __init__.py  employee.py  fuel_extraction_schema.py  meal_extraction_schema.py  ride_extraction_schema.py
src/output/: ridesIIIPL-1000_naveen_oct_amex  ridesIIIPL-1011_smitha_oct_tesco  ridesIIIPL-3185_SMITHA_oct_tesco  ridesIIIPL-5030_SIREESHA_oct_amex  ridesIIIPL-5030_sireesha_oct_amex  ridesIIIPL-5653_ashwini_nov_tesco
src/persist/: save_to_database_commute.py
src/prompt/: system_meal_prompt.txt  system_prompt_cab.txt  system_prompt_decision.txt  system_prompt_fuel.txt  (+1 more)
tests/: README.md  __init__.py  conftest.py  test_config_loader.py  test_decision_engine.py  test_folder_parser.py  test_folder_processor.py  test_io_local.py  test_paths.py  test_validators.py
(+61 files in other folders)
